<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu_Users">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="400dp"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@id/PersonalArea"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/logo_menu_users"
        android:contentDescription="@string/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PersonalArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PersonalAccount"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/batton_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BookingCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BookCar"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PersonalArea"
        android:background="@drawable/batton_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BookedCars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BookedCars"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BookingCars"
        android:background="@drawable/batton_background"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogOutOfAccount"
        android:layout_margin="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BookedCars"
        android:background="@drawable/batton_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>