<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".base_data_car">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/carBrand"/>

    <EditText
        android:id="@+id/carBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/carBrand"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/etPrice"
        app:layout_constraintEnd_toStartOf="@+id/carModel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heading"
        tools:ignore="TextContrastCheck"
        android:autofillHints="@string/carBrand" />

    <EditText
        android:id="@+id/carModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/carModel"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/etPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/carBrand"
        app:layout_constraintTop_toBottomOf="@id/heading"
        tools:ignore="TextContrastCheck"
        android:autofillHints="@string/carBrand"/>

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/YearRelease"
        android:inputType="date"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_table"
        app:layout_constraintEnd_toStartOf="@+id/etPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carBrand"
        tools:ignore="TextContrastCheck"
        android:autofillHints="@string/carBrand"/>

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/etDate"
        app:layout_constraintTop_toBottomOf="@id/carModel"
        tools:ignore="TextContrastCheck"
        android:autofillHints="@string/carBrand"/>

    <TableRow
        android:id="@+id/button_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/dbOutput"
        app:layout_constraintEnd_toStartOf="@id/dbOutput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPrice"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/batton_background"
            android:text="@string/add"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:background="@drawable/batton_background"
            android:text="@string/clear"/>
    </TableRow>

    <TableLayout
        android:id="@+id/dbOutput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/Exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_table">
    </TableLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dbOutput"
        android:background="@drawable/batton_background"
        android:text="@string/exitMenu"/>

</androidx.constraintlayout.widget.ConstraintLayout>